# minimal-gstreamer-webrtc

./: .gitignore  README.md  cargo.toml
signal_server/: Cargo.toml
signal_server/src/: main.rs
webrtc_backend/: Cargo.toml  run.sh
webrtc_backend/src/: main.rs  session.rs  signals.rs  webrtc.rs
webrtc_frontend_web/: index.html  run_http_server.sh  webrtc.js
