[package]
name = "signal_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
tokio = { version="1.32.0", features=["full"] }
tokio-tungstenite = "0.20.1"
tungstenite = "0.20.1"
